--- a/pages/login-register.html
+++ b/pages/login-register.html
@@ -1,155 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
-    <script type="module" src="/scripts/login-register/login-register.js" defer></script>
-    <script src="../../scripts/general-scripts/sessionChecks.js" defer></script>
-    <script src="../scripts/general-scripts/logoutUser.js" defer></script>
-    <link rel="stylesheet" href="../../styles/general-styles.css">
-    <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
-    <title>Acceder</title>
-  </head>
-  <body>
-		<header>
-      <nav class="navbar navbar-expand-lg navbar-dark py-0">
-        <div class="container-fluid">
-          <div class="d-flex border-end py-3">
-            <img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="45" height="" class="d-inline-block align-text-top">
-            <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
-          </div>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse ps-2" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" aria-current="page" href="/index.html">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contact.html">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="../pages/about-us.html">Nosotros</a></li>
-            </ul>
-            <ul class="navbar-nav mb-2 mb-lg-0">
-              <div id="admin-item">
-                <li class="nav-item"><a class="nav-link" href="./admin/admin-panel.html">Admin</a></li>
-              </div>
-              <div id="logout-item">
-                <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger">Salir</a></li>
-              </div>
-              <div id="login-item">
-                <li class="nav-item"><a class="nav-link active" href="./login-register.html">Ingresar</a></li>
-              </div>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
+  <script type="module" src="/scripts/login-register/login-register.js" defer></script>
+  <script src="../../scripts/general-scripts/sessionChecks.js" defer></script>
+  <script src="../scripts/general-scripts/logoutUser.js" defer></script>
+  <link rel="stylesheet" href="../../styles/general-styles.css">
+  <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
+  <title>Acceder</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark py-0">
+      <div class="container-fluid">
+        <div class="d-flex border-end py-3">
+          <img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="45" height=""
+            class="d-inline-block align-text-top">
+          <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
         </div>
-      </nav>
-    </header>
-    <main class="my-md-4">
-      <div class="container access-container">
-        <div class="access-row row d-flex justify-content-center align-items-center">
-          <div class="login-section general-container col-12 col-sm-9 col-md-7 col-lg-5 col-xl-4 px-5 pt-5 pb-0 py-md-4 d-block align-self-stretch align-self-md-center" id="login-section">
-            <h2 class="mb-3 mt-2">Acceder:</h2>
-            <form class="mb-4" id="login-form">
-              <div class="input-control mb-3">
-                <label for="email-login" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="emailLogin" aria-describedby="emailHelp" placeholder="Tu email">
-                <div class="error"></div>
-              </div>
-              <div class="input-control mb-3">
-                <label for="password-login" class="form-label">Contraseña:</label>
-                <input type="password" class="form-control" id="passwordLogin" placeholder="Tu contraseña">
-                <div class="error"></div>
-              </div>
-              <div class="input-control mb-3 form-check d-flex justify-content-between">
-                <div>
-                  <input type="checkbox" class="form-check-input" id="checkRemember">
-                  <label class="form-check-label" for="checkRemember">Recordarme</label>
-                </div>
-                <a href="./404error.html">Olvide mi contraseña</a>
-              </div>
-              <button type="submit" class="btn btn-success">Ingresar</button>
-            </form>
-            <p class="text-center">No tienes cuenta?<button class="btn btn-link px-1" id="register-link">Registrate aqui.</button></p>
-          </div>
-          <div class="register-section general-container col-12 col-sm-9 col-md-7 col-lg-5 col-xl-4 px-5 py-5 py-md-4 pb-3 d-none" id="register-section">
-            <h2 class="mb-3 mt-2">Registrate:</h2>
-            <form class="mb-4" id="register-form">
-              <div class="input-control mb-3">
-                <label for="username-register" class="form-label">Nombre de usuario:</label>
-                <input type="text" class="form-control" id="userNameRegister" placeholder="Solo letras y numeros">
-                <div class="error"></div>
-              </div>
-              <div class="input-control mb-3">
-                <label for="email-register" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="emailRegister" aria-describedby="emailHelp" placeholder="ejemplo@email.com">
-                <div class="error"></div>
-              </div>
-              <div class="input-control mb-3">
-                <label for="password-register" class="form-label">Contraseña:</label>
-                <input type="password" class="form-control" id="passwordRegister" placeholder="Ingresa tu contraseña">
-                <div class="error"></div>
-              </div>
-              <div class="input-control mb-3">
-                <label for="password2-register" class="form-label">Repite tu contraseña:</label>
-                <input type="password" class="form-control" id="password2Register" placeholder="Repite tu contraseña">
-                <div class="error"></div>
-              </div>
-              <div class="input-control mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="checkTerms">
-                <label class="form-check-label" for="checkTerms">Acepto los terminos y condiciones.</label>
-                <div class="error"></div>
-              </div>
-              <div class="d-flex justify-content-center mt-4">
-                <button type="submit" class="btn btn-success">Registrarme</button>
-              </div>
-            </form>
-            <p class="text-center mb-0">Ya tienes cuenta?<button class="btn btn-link px-1" id="login-link">Accede aqui.</button></p>
-          </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse ps-2" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="/index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="./contact.html">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/about-us.html">Nosotros</a></li>
+          </ul>
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <div id="admin-item">
+              <li class="nav-item"><a class="nav-link" href="./admin/admin-panel.html">Admin</a></li>
+            </div>
+            <div id="logout-item">
+              <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger">Salir</a></li>
+            </div>
+            <div id="login-item">
+              <li class="nav-item"><a class="nav-link active" href="./login-register.html">Ingresar</a></li>
+            </div>
+          </ul>
         </div>
-      </div>    
-    </main>
-    <footer class="container-fluid d-flex  justify-content-between align-items-center py-4">
-      <div class="col-md-3 ms-3 d-flex align-items-center">
-        <p class="mb-0 fs-5 text-white d-flex flex-column flex-sm-row"><span class="pe-2">© 2022</span> <span>Games Chief</span></p>
       </div>
-      <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
-        <a href="../../index.html" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
+    </nav>
+  </header>
+  <main class="my-md-4">
+    <div class="container access-container">
+      <div class="access-row row d-flex justify-content-center align-items-center">
+        <div
+          class="login-section general-container col-12 col-sm-9 col-md-7 col-lg-5 col-xl-4 px-5 pt-5 pb-0 py-md-4 d-block align-self-stretch align-self-md-center"
+          id="login-section">
+          <h2 class="mb-3 mt-2">Acceder:</h2>
+          <form class="mb-4" id="login-form">
+            <div class="input-control mb-3">
+              <label for="email-login" class="form-label">Email:</label>
+              <input type="email" class="form-control" id="emailLogin" aria-describedby="emailHelp"
+                placeholder="Tu email">
+              <div class="error"></div>
+            </div>
+            <div class="input-control mb-3">
+              <label for="password-login" class="form-label">Contraseña:</label>
+              <input type="password" class="form-control" id="passwordLogin" placeholder="Tu contraseña">
+              <div class="error"></div>
+            </div>
+            <div class="input-control mb-3 form-check d-flex justify-content-between">
+              <div>
+                <input type="checkbox" class="form-check-input" id="checkRemember">
+                <label class="form-check-label" for="checkRemember">Recordarme</label>
+              </div>
+              <a href="./404error.html">Olvide mi contraseña</a>
+            </div>
+            <button type="submit" class="btn btn-success">Ingresar</button>
+          </form>
+          <p class="text-center">No tienes cuenta?<button class="btn btn-link px-1" id="register-link">Registrate
+              aqui.</button></p>
+        </div>
+        <div
+          class="register-section general-container col-12 col-sm-9 col-md-7 col-lg-5 col-xl-4 px-5 py-5 py-md-4 pb-3 d-none"
+          id="register-section">
+          <h2 class="mb-3 mt-2">Registrate:</h2>
+          <form class="mb-4" id="register-form">
+            <div class="input-control mb-3">
+              <label for="username-register" class="form-label">Nombre de usuario:</label>
+              <input type="text" class="form-control" id="userNameRegister" placeholder="Solo letras y numeros">
+              <div class="error"></div>
+            </div>
+            <div class="input-control mb-3">
+              <label for="email-register" class="form-label">Email:</label>
+              <input type="email" class="form-control" id="emailRegister" aria-describedby="emailHelp"
+                placeholder="ejemplo@email.com">
+              <div class="error"></div>
+            </div>
+            <div class="input-control mb-3">
+              <label for="password-register" class="form-label">Contraseña:</label>
+              <input type="password" class="form-control" id="passwordRegister" placeholder="Ingresa tu contraseña">
+              <div class="error"></div>
+            </div>
+            <div class="input-control mb-3">
+              <label for="password2-register" class="form-label">Repite tu contraseña:</label>
+              <input type="password" class="form-control" id="password2Register" placeholder="Repite tu contraseña">
+              <div class="error"></div>
+            </div>
+            <div class="input-control mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="checkTerms">
+              <label class="form-check-label" for="checkTerms">Acepto los terminos y condiciones.</label>
+              <div class="error"></div>
+            </div>
+            <div class="d-flex justify-content-center mt-4">
+              <button type="submit" class="btn btn-success">Registrarme</button>
+            </div>
+          </form>
+          <p class="text-center mb-0">Ya tienes cuenta?<button class="btn btn-link px-1" id="login-link">Accede
+              aqui.</button></p>
+        </div>
       </div>
-      <div class="nav col-md-3 me-3 justify-content-end">
-        <ul class="d-flex flex-row mb-0 list-unstyled">
-          <li class="ms-3"><i class="bi bi-github text-white fs-3"></i></li>
-          <li class="ms-3"><i class="bi bi-instagram text-white fs-3"></i></li>
-          <li class="ms-3"><i class="bi bi-facebook text-white fs-3"></i></li>
-        </ul>
-      </div>
-    </footer>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-      (function () {
-        emailjs.init("oZSVLP6UBWgxrvqLV");
-      })();
-    </script>
-  </body>
+    </div>
+  </main>
+  <footer class="container-fluid d-flex  justify-content-between align-items-center py-4">
+    <div class="col-md-3 ms-3 d-flex align-items-center">
+      <p class="mb-0 fs-5 text-white d-flex flex-column flex-sm-row"><span class="pe-2">© 2022</span> <span>Games
+          Chief</span></p>
+    </div>
+    <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
+      <a href="../../index.html" class="link-dark text-decoration-none"><img
+          src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
+    </div>
+    <div class="nav col-md-3 me-3 justify-content-end">
+      <ul class="d-flex flex-row mb-0 list-unstyled">
+        <li class="ms-3"><i class="bi bi-github text-white fs-3"></i></li>
+        <li class="ms-3"><i class="bi bi-instagram text-white fs-3"></i></li>
+        <li class="ms-3"><i class="bi bi-facebook text-white fs-3"></i></li>
+      </ul>
+    </div>
+  </footer>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("oZSVLP6UBWgxrvqLV");
+    })();
+  </script>
+</body>
+
 </html>
